# weekly_agent_assistant

./: .dockerignore  .gitignore  .railwayignore  .vercelignore  Dockerfile  Procfile  README.md  demo_complete_setup.py  env_template.txt  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements-railway.txt  requirements.txt  setup_environment.py  start.sh  test_crew.py  test_crew_inventory.py  test_gemini.py  test_image_crew.py  vercel.json
Image-To-Text/: COMMANDS.md  CostcoBill.json  README.md  env_example.txt  example_usage.py  image_to_json_agent.py  requirements.txt  setup_commands.sh
api/: generate_shopping_list.py  health.py  process_inventory.py
backend/: main.py
data/: current_grocery_list.json  default_grocery_list.json
inventory-app/: README.md  SETUP_GUIDE.md  app.py  config.py  main.py  models.py  next.config.mjs  package-lock.json  requirements.txt  run.sh  start.sh  test_crew_integration.py
inventory-app/app/: page.tsx
inventory-app/app/api/generate-shopping-list/: route.ts
inventory-app/app/api/process-inventory/: route.ts
outputs/: receipt_analysis.json  test_output.json  test_output_20250921_163143.json  test_output_20250921_163220.json  test_output_20250921_170933.json
poc/: ._SmartShop_poc.py  ._inventory.json  ._ledger.json  SmartShop_poc.py  inventory.json  ledger.json
src/smart_shop/: crew.py  main.py
src/smart_shop/config/: agents.yaml  tasks.yaml
src/smart_shop/tools/: .___pycache__  image_to_json_tool.py  inventory_creator_tool.py
